[tool.poetry]
name = "medieval_city_generator"
version = "1.0"
description = "Medieval City Generator in pure Python"
authors = ["Ewael <turodoras@gmail.com>", "Hugo <hugo.levy@epita.fr>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
Shapely = "^1.7.1"
Fiona = "^1.8.20"
geopandas = "^0.9.0"
matplotlib = "^3.4.2"
numpy = "^1.21.0"
scipy = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
